--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kramad92.github.io/box-office",
+  "homepage": "https://kramad92.github.io/boxoffice",
   "name": "boxoffice",
   "version": "0.1.0",
   "private": true,
